# Weasel

./: .gitmodules
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml
crates/weasel_console/: Cargo.toml
crates/weasel_console/src/: main.rs
crates/weasel_core/: Cargo.toml
crates/weasel_core/src/: lib.rs  value.rs  wast.pest
