[package]
edition = "2018"
name = "weasel_console"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
wabt = "0.10.0"

[dev-dependencies.cargo-husky]
default-features = false # Disable features which are enabled by default
features = ["prepush-hook", "run-cargo-test", "run-cargo-clippy", "run-for-all", "run-cargo-fmt"] 
version = "1"
