[package]
edition = "2018"
name = "weasel_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = {version = "2.1.3", default-features = false}
pest_derive = {version = "2.1.0", default-features = false}

[dev-dependencies]
wabt = "0.10.0"
